# satreci_assignment

./: CMakeLists.txt  README.md  func.c  func.h  main.c  studentlist.txt
studentMS/: func.c  func.h  main.c
studentMS_tests/: unit_test.c  unit_test.h
